// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`system props withSystemProps() applies multiple theme values 1`] = `
.emotion-0 {
  font-family: Helvetica,Verdana,sans-serif;
  margin: 16px;
}

<b
  blacklist={
    Array [
      "css",
      "fontFamily",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="emotion-0"
  fontFamily="sans"
  is={[Function]}
  m={2}
/>
`;

exports[`system props withSystemProps() applies one theme value 1`] = `
.emotion-0 {
  margin: 16px;
}

<b
  blacklist={
    Array [
      "css",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="emotion-0"
  is={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "blacklist": Array [
              "css",
              "m",
              "mt",
              "mr",
              "mb",
              "ml",
              "mx",
              "my",
              "p",
              "pt",
              "pr",
              "pb",
              "pl",
              "px",
              "py",
            ],
            "className": "emotion-0",
            "is": [MockFunction] {
              "calls": [Circular],
            },
            "m": 2,
          },
          Object {},
        ],
      ],
    }
  }
  m={2}
/>
`;
